cartservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: cartservice
    labels:
        app: cartservice
    spec:
        replicas: 1
        selector:
            matchLabels:
                app: cartservice
        template:
            metadata:
                labels:
                    app: cartservice
            spec:
                containers:
                    - name : cartservice
                      image: ghcr.io/<tvuj-username>/cartservice:latest  # TODO: nahraï adresou tvého image v ACR/GHCR
                      ports:
                        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: cartservice
    labels:
        app: cartservice
spec:
    selector:
        app: cartservice
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
    type: ClusterIP
