deliveryservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deliveryservice
    labels:
        app: deliveryservice
spec:
    replicas: 1
    selector:
        matchLabels:
            app: deliveryservice
    template:
        metadata:
            labels:
                app: deliveryservice
        spec:
            containers:
                - name: deliveryservice
                  image: ghcr.io/<tvuj-username>/deliveryservice:latest  # TODO: nahraï adresou tvého image v ACR/GHCR
                  ports:
                      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: deliveryservice
    labels:
        app: deliveryservice
spec:
    selector:
        app: deliveryservice
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
    type: ClusterIP
