notificationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: notificationservice
    labels:
        app: notificationservice
spec:
    replicas: 1
    selector:
        matchLabels:
            app: notificationservice
    template:
        metadata:
            labels:
                app: notificationservice
        spec:
            containers:
                - name: notificationservice
                  image: ghcr.io/<tvuj-username>/notificationservice:latest
                  ports:
                      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: notificationservice
    labels:
        app: notificationservice
spec:
    selector:
        app: notificationservice
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
    type: ClusterIP
