orderservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: orderservice
    labels:
        app: orderservice
spec:
    replicas: 1
    selector:
        matchLabels:
            app: orderservice
    template:
        metadata:
            labels:
                app: orderservice
        spec:
            containers:
                - name: orderservice
                  image: ghcr.io/<tvuj-username>/orderservice:latest
                  ports:
                      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: orderservice
    labels:
        app: orderservice
spec:
    selector:
        app: orderservice
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
    type: ClusterIP
