productservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: productservice
    labels:
        app: productservice
spec:
    replicas: 1
    selector:
        matchLabels:
            app: productservice
    template:
        metadata:
            labels:
                app: productservice
        spec:
            containers:
                - name: productservice
                  image: ghcr.io/<tvuj-username>/productservice:latest
                  ports:
                      - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: productservice
    labels:
        app: productservice
spec:
    selector:
        app: productservice
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
    type: ClusterIP
