ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  labels:
    app: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost   # Replace with public DNS name when running on AKS
      http:
        paths:
          - path: /cart(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: cartservice
                port:
                  number: 8080

          - path: /delivery(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: deliveryservice
                port:
                  number: 8080

          - path: /notification(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: notificationservice
                port:
                  number: 8080

          - path: /order(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: orderservice
                port:
                  number: 8080

          - path: /payment(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: paymentservice
                port:
                  number: 8080

          - path: /product(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: productservice
                port:
                  number: 8080

          - path: /user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 8080
